# wit-core

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cy.yml  publish-to-pypi.yml
wit_core/: __init__.py  chatbot.py  decorators.py
wit_core/actions/: actions.py
wit_core/api/: http_server.py  websocket_server.py
wit_core/cli/: cli.py  http_server.py  scafolld.py  shell.py  websocket_server.py
wit_core/cli/initial_project/: domain.yaml
wit_core/core/: domain.py  process.py  utils.py
wit_core/templates/: templates.py
wit_core/tests/: conftest.py  test_domain.py  test_http_server.py  test_process.py  test_websocket_server.py  utilities.py
